# whiteboard

./: .gitignore  README.md  docker-compose.yml  notebook.ipynb  pgstac-external-table.ipynb  pyproject.toml  sqitch.conf
deploy/: aois.sql
pgstac-external-tables/: Dockerfile  docker-compose.yml  sqitch.plan
pgstac-external-tables/deploy/: aois.sql
pgstac-external-tables/verify/: aois.sql
revert/: aois.sql
scripts/: load
verify/: aois.sql
