[project]
name = "whiteboard"
version = "0.0.0"
description = "Sketches and such"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.3",
    "pgstacrs>=0.1.0",
    "psycopg>=3.2.3",
    "pystac>=1.11.0",
    "pystac-client>=0.8.5",
    "shapely>=2.0.6",
    "stacrs>=0.3.0",
    "tqdm[notebook]>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
